--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mohit Raj
+title: <p align = "center"> Mohit Raj </p>
 logo: /assets/img/MR.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
