--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align = "center"> Mohit Raj </p>
 logo: /assets/img/MR.jpeg
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+description: 
+<a href="https://www.linkedin.com/in/raj-mohit/"LinkedIn<a/a>
+
 theme: jekyll-theme-minimal
