--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align = "center"> Mohit Raj </p>
 logo: /assets/img/MR.jpeg
 description: 
   <p align="center">
-  <a href="https://www.linkedin.com/in/raj-mohit/"LinkedIn<a/a>
+  <a href="https://www.linkedin.com/in/raj-mohit/">LinkedIn<a/a>
   <br>
   </p>
 
